tests/baselines/reference/tsxInvokeComponentType.errors.txt
tests/cases/compiler/tsxInvokeComponentType.tsx(6,14): error TS2322: Type '{}' is not assignable to type 'IntrinsicAttributes & { someKey: string; } & { children?: ReactNode; }'.
  Type '{}' is not assignable to type '{ someKey: string; }'.
    Property 'someKey' is missing in type '{}'.


==== tests/cases/compiler/tsxInvokeComponentType.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import React, { ComponentType } from "react";
    
    declare const Elem: ComponentType<{ someKey: string }>;
    
    const bad = <Elem />;
                 ~~~~
!!! error TS2322: Type '{}' is not assignable to type 'IntrinsicAttributes & { someKey: string; } & { children?: ReactNode; }'.
!!! error TS2322:   Type '{}' is not assignable to type '{ someKey: string; }'.
!!! error TS2322:     Property 'someKey' is missing in type '{}'.
    
    const good = <Elem someKey="ok" />;
    
    declare const Elem2: ComponentType<{ opt?: number }>;
    const alsoOk = <Elem2>text</Elem2>;
    